--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,9 @@ body {
 
 .header {
   max-height: 900px;
+}
+
+.header__hidden {
   display: none;
 }
 
@@ -224,9 +227,9 @@ body {
 
 .help__btn::after {
   position: absolute;
+  content: '';
   transform: scale(0, 0);
   z-index: 1;
-  content: '';
   left: -50px;
   width: 220px;
   height: 220px;
