--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ body {
 }
 
 .header__top-row {
+  position: relative;
   display: flex;
   width: 100%;
   height: 100px;
@@ -138,8 +139,9 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 40px;
+  width: 50px;
   height: 100%;
+  cursor: pointer;
 }
 
 .header__menu {
@@ -222,19 +224,34 @@ body {
   display: flex;
   align-items: center;
   margin-left: auto;
-  margin-right: 98px;
+  width: 220px;
+  height: 220px;
 }
 
-.help__btn::after {
+.help__btn-bg {
   position: absolute;
   content: '';
-  transform: scale(0, 0);
   z-index: 1;
   left: -50px;
   width: 220px;
   height: 220px;
   background: rgba(0, 0, 0, 0.6);
   border-radius: 50%;
+  cursor: pointer;
+}
+
+.help__btn:focus .help__btn-bg,
+.help__btn:hover .help__btn-bg {
+  left: -65px;
+  width: 250px;
+  height: 250px;
+}
+
+.help__btn:active .help__btn-bg {
+  left: -5000%;
+  width: 10000%;
+  height: 10000%;
+  transition: all 2s linear;
 }
 
 .help__link {
