--- a/css/style.css
+++ b/css/style.css
@@ -574,6 +574,8 @@ body {
   background: url('../img/Rectangle359.png') center center no-repeat;
   background-size: cover;
   margin-bottom: 200px;
+  opacity: 0;
+  transition: opacity .3s ease-in-out;
 }
 
 .benefits__img-500 {
@@ -583,6 +585,8 @@ body {
   margin-bottom: 200px;
   background: url('../img/Rectangle362.jpg') center center no-repeat;
   background-size: cover;
+  opacity: 0;
+  transition: opacity .3s ease-in-out;
 }
 
 .benefits__title-500 {
@@ -628,6 +632,8 @@ body {
   height: 600px;
   background: url('../img/Rectangle405.jpg') center center no-repeat;
   background-size: cover;
+  opacity: 0;
+  transition: opacity .3s ease-in-out
 }
 
 .block__title {
@@ -683,6 +689,8 @@ body {
   height: 428px;
   background: url('../img/Rectangle402.jpg') center center no-repeat;
   background-size: cover;
+  opacity: 0;
+  transition: opacity .3s ease-in-out
 }
 
 .main-btn-600 {
@@ -870,9 +878,18 @@ body {
 }
 
 .callback__tel {
+  position: relative;
   width: 500px;
   margin-top: 50px;
   padding-bottom: 5px;
+}
+
+.callback__tel-line {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  opacity: 0;
   border-bottom: 1px solid #010101;
 }
 
@@ -1008,9 +1025,8 @@ body {
 /* accordion */
 
 .accordion__item {
+  position: relative;
   width: 100%;
-  border-bottom: 1px solid #E6E6E6;
-  transition: border-bottom 0.3s ease-in-out;
 }
 
 .accordion__item:focus,
