--- a/css/animation.css
+++ b/css/animation.css
@@ -26,7 +26,7 @@
 
   100% {
     opacity: 1;
-    width: 300px;
+    width: 100%;
   }
 }
 
@@ -396,10 +396,24 @@
 
 @keyframes btn-line {
   0% {
-    clip: inset(0 0 0 0);
+    margin-left: auto;
+    width: 100%;
   }
 
   100% {
-    clip: inset(0 0 0 20%);
+    margin-left: auto;
+    width: 80%;
+  }
+}
+
+@keyframes btn-line-active {
+  0% {
+    margin-left: auto;
+    width: 80%;
+  }
+
+  100% {
+    margin-left: auto;
+    width: 20%;
   }
 }
