--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,7 @@ body {
 }
 
 .menu__main-btn {
+  display: none;
   opacity: 0;
   visibility: hidden;
 }
@@ -1482,6 +1483,7 @@ a.ui-button:active,
   }
 
   .menu__main-btn_visible {
+    display: block;
     width: 300px;
     padding-right: 20px;
     margin-top: 100px;
